--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "connect": "^3.0.1",
-    "minimist": "^0.2.0"
+    "minimist": "^0.2.0",
+    "serve-static": "^1.0.3"
   },
   "devDependencies": {
     "coffee-script": "^1.7.1"
