--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "license": "MIT",
   "dependencies": {
     "connect": "^3.0.1",
+    "jade": "^1.3.0",
     "minimist": "^0.2.0",
     "serve-static": "^1.0.3"
   },
   "devDependencies": {
-    "coffee-script": "^1.7.1"
+    "chai": "^1.9.1",
+    "coffee-script": "^1.7.1",
+    "mocha": "^1.20.1",
+    "supertest": "^0.13.0"
   }
 }
